Bundle JS files via Qt resources
- Added a Qt resource file (resources.qrc) to bundle JavaScript files.
- Updated CMakeLists.txt to use qt_add_resources, ensuring JS files are embedded.
- Removed redundant JS file copying in build-and-deploy.sh since JS is now bundled.
- Modified node_thread.cpp to load the bundle from the Qt resource system instead of the filesystem.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -214,6 +214,14 @@ qt_add_qml_module(Wallet
 	RESOURCES ${SVG_FILES_LIST} ${JSON_FILES_LIST} ${JS_FILES_LIST}
 )
 
+# Add Qt resource file for JavaScript files
+qt_add_resources(Wallet "js_resources"
+	PREFIX "/js"
+	FILES
+		src/js/bootstrap.js
+		src/js/dist/bundle.cjs
+)
+
 # Find Node.js entry files and include all node_modules
 file(GLOB_RECURSE NODE_MODULES_FILES_LIST RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "src/js/node_modules/**/*.js")
 
