--- a/src/js/package.json
+++ b/src/js/package.json
@@ -18,7 +18,7 @@
 	},
 	"dependencies": {
 		"ethers": "^6.15.0",
-		"libersoft-crypto": "https://github.com/libersoft-org/crypto-utils",
+    "libersoft-crypto": "https://github.com/libersoft-org/crypto-utils#eed97a6b8687a139a2f220cb01f38e9273cb13cb",
 		"node-wifi": "^2.0.16",
 		"systeminformation": "^5.27.7"
 	},
