--- a/.qmlls.ini
+++ b/.qmlls.ini
@@ -1,5 +1,5 @@
 [General]
-buildDir="/root/matchbox-wallet/build/linux"
+buildDir="/home/koom/repos/libersoft-org/matchbox-wallet/0/matchbox-wallet/build/linux"
 no-cmake-calls=false
-docDir=/usr/share/qt6/doc
-importPaths="/usr/lib/x86_64-linux-gnu/qt6/qml"
+docDir=/home/koom/Qt/Docs/Qt-6.9.2
+importPaths="/home/koom/Qt/6.9.2/gcc_64/qml"
