Add window settings persistence
Introduce a new WindowSettings class to load, store, and update window geometry using QSettings. The changes register this QML type and tie window position/size updates to property changes, ensuring persistence across sessions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -202,6 +202,8 @@ set(WALLET_SOURCES
 	src/node.cpp
 	src/include/hotreload.h
 	src/hotreload.cpp
+	src/include/windowsettings.h
+	src/windowsettings.cpp
 )
 if(ENABLE_NODEJS)
 	list(APPEND WALLET_SOURCES 
